// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions should deleteSearch should create deleteSearch action 1`] = `
Object {
  "payload": Object {
    "index": 0,
    "isEditing": false,
    "isIncluded": false,
    "name": "",
    "phrases": Array [],
  },
  "type": "DELETE_SEARCH",
}
`;

exports[`actions should moveSearch should create moveSearch action 1`] = `
Object {
  "payload": Object {
    "initialIndex": 1,
    "nextIndex": 2,
  },
  "type": "MOVE_SEARCH",
}
`;

exports[`actions should storeSearch should create storeSearch action 1`] = `
Object {
  "payload": Object {
    "index": 0,
    "isEditing": false,
    "isIncluded": false,
    "name": "",
    "phrases": Array [],
  },
  "type": "STORE_SEARCH",
}
`;

exports[`actions should unsetPhrase should create unsetPhrase action 1`] = `
Object {
  "payload": Object {
    "index": 0,
    "searchIndex": 0,
    "text": "",
  },
  "type": "UNSET_PHRASE",
}
`;

exports[`searches actions should deleteSearch should create deleteSearch action 1`] = `
Object {
  "payload": Object {
    "index": 0,
    "isEditing": false,
    "isIncluded": false,
    "name": "",
    "phrases": Array [],
  },
  "type": "DELETE_SEARCH",
}
`;

exports[`searches actions should moveSearch should create moveSearch action 1`] = `
Object {
  "payload": Object {
    "initialIndex": 1,
    "nextIndex": 2,
  },
  "type": "MOVE_SEARCH",
}
`;

exports[`searches actions should storeSearch should create storeSearch action 1`] = `
Object {
  "payload": Object {
    "index": 0,
    "isEditing": false,
    "isIncluded": false,
    "name": "",
    "phrases": Array [],
  },
  "type": "STORE_SEARCH",
}
`;

exports[`searches actions should unsetPhrase should create unsetPhrase action 1`] = `
Object {
  "payload": Object {
    "index": 0,
    "searchIndex": 0,
    "text": "",
  },
  "type": "UNSET_PHRASE",
}
`;
